FIX: In AbstractIlluminaDemuxDataProcessor, fix previous fix for NullPointerException when the report.url parameter is not set.